<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoWords</string>
    <string name="desc">Flashcard study app</string>
    <string name="menu_settings">Settings</string>
    <string name="main_folders">Choose a folder:</string>
    <string name="title_activity_folder">Available files for study</string>
    <string name="title_activity_words">Study mode</string>
    <string name="folder_ok_button_text">Go</string>
    <string name="folder_limit_spinner_header">Number of words: </string>
    <string name="folder_inverse_checkbox_text">Study in opposite direction</string>
    <string name="folder_one_direction_checkbox_text">Study in one direction</string>
    <string name="words_pause_button_text">pause</string>
    <string name="words_previous_word_button_text">previous word</string>
    <string name="words_next_word_button_text">next word</string>
    <string name="words_word_finish_button_text">finish</string>
    <string name="words_previous_side_button_text">previous side</string>
    <string name="words_next_side_button_text">next side</string>
    <string name="words_time_view_default_text">00:00</string>
    <string name="pref_root_directory_title">Choose root directory</string>
    <string name="pref_root_directory_default">MoWords</string>
    <string name="pref_root_theme">Theme</string>
    <string name="pref_root_folders">Folders</string>
    <string name="pref_folder_visible_title">Visible</string>
    <string name="pref_folder_visible_default">true</string>
    <string name="pref_folder_limits_title">Limit</string>
    <string name="pref_folder_limits_values">5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 95, 100</string>
    <string name="pref_folder_limits_default">20, 25, 30, 35, 40</string>
    <string name="pref_folder_default_limit_title">Default limit</string>
    <string name="pref_folder_one_direction">One direction</string>
    <string name="pref_folder_one_direction_default">false</string>
    <string name="pref_folder_sides_title">Sides</string>
    <string name="pref_folder_sides_summary">Configure font and encoding</string>
    <string name="pref_side_typeface">Typeface</string>
    <string name="pref_side_typeface_default">default</string>
    <string name="pref_side_font_size">Font size</string>
    <string name="pref_side_font_size_default">24</string>
    <string name="pref_side_encoding">Encoding</string>
    <string name="pref_side_encoding_default">Utf-8</string>
    <string name="pref_folder_dialog_rename_folder">Rename folder</string>
    <string name="pref_folder_dialog_new_folder">New folder</string>
    <string name="pref_folder_dialog_ok">OK</string>
    <string name="pref_folder_dialog_cancel">Cancel</string>
    <string name="initialize">MoWords initialization</string>
    <string name="settings_text">Hello! Please choose the directory for flashcards and the theme.</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="welcome_title">Welcome to the MoWords application</string>
    <string name="welcome_text">This is <b>MoWords</b>, a mobile application for studying words and/or pictures.</string>
    <string name="welcome_use_title">How to use</string>
    <string name="welcome_use_files">Files are grouped in <b>folders</b>. Each folder can have its own settings like text size and fonts.\n
        Each file is a list of <b>words</b>. A file must have a \'.txt\' extension and be encoded in UTF-8.</string>
    <string name="welcome_use_tab">Each line of a file is a word. Each word can contain several <b>sides</b>.\n
        The sides of a word are separated by tabs.\n
        The basic structure with examples of files will be created in the application folder.</string>
    <string name="welcome_use_navigate">In study mode: swipe vertically and horizontally to change sides or cards.\n
        A click toggles correct/incorrect. A long click is for pause.</string>
    <string name="welcome_use_images">To put <b>images</b> instead of words put the image in the folder \'images/[name of file]/\'.\n
        In the text file write \"[image:img.ext]\" where \'img.ext\' is the image filename.\n
        The image can be in one of the following formats: png, gif, bmp or jpg/jpeg.</string>
    <string name="welcome_use_fonts">You can put your <b>fonts</b> for displaying of words.\n
        Different sides can have different fonts. Put fonts in the \'fonts\' directory.</string>
    <string name="welcome_use_egyptian">You can also use <b>Egyptian MdC</b> string and <b>transliteration</b> (see settings, encoding).</string>
    <string name="welcome_folder_label">Folder for files:</string>
    <string name="welcome_folder_button">Change folder</string>
    <string name="ok_button">OK</string>

</resources>