<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <com.naens.preferences.FindFolderDialogPreference
        android:defaultValue="@string/pref_root_directory_default"
        android:key="pref_root_dir"
        android:title="@string/pref_root_directory_title">
    </com.naens.preferences.FindFolderDialogPreference>

    <ListPreference
        android:key="pref_theme"
        android:persistent="true"
        android:title="@string/pref_root_theme"
        android:entries="@array/pref_theme_entries"
        android:entryValues="@array/pref_theme_entries" />

    <PreferenceScreen
        android:key="pref_fonts"
        android:persistent="false"
        android:title="@string/pref_root_folders" />

</PreferenceScreen>