<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- hello, please choose the directory for flashcards and the theme -->
    <Preference
        android:layout="@layout/settings_message"
        android:title="@string/initialize" />

    <com.naens.preferences.FindFolderDialogPreference
        android:defaultValue="@string/pref_root_directory_default"
        android:key="pref_root_dir"
        android:title="@string/pref_root_directory_title" >
    </com.naens.preferences.FindFolderDialogPreference>

    <ListPreference
        android:entries="@array/pref_theme_entries"
        android:entryValues="@array/pref_theme_entries"
        android:key="pref_theme"
        android:persistent="true"
        android:title="@string/pref_root_theme" />

</PreferenceScreen>